make changes for hosting